--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,14 @@ bind -n C-l select-pane -R
 bind -n C-j select-pane -U
 bind -n C-k select-pane -D
 
+# pane size
+bind k resize-p -D 2
+bind j resize-p -U 2
+bind h resize-p -L 2
+bind l resize-p -R 2
+
 # Enable mouse mode (tmux 2.1 and above)
-#set -g mouse on
+set -g mouse on
 
 # Copy-paste integration
 set-option -g default-command "reattach-to-user-namespace -l bash"
@@ -27,15 +33,18 @@ setw -g mode-keys vi
 #
 ## Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 ####################
 #    Status bar    #
+####################
 set -g status-position bottom
-set -g status-bg colour234
+set -g status-bg colour239
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left-bg colour238
-set -g status-left-fg colour81
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-left-bg colour128
+set -g status-left-fg colour254
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour254,bg=colour129,bold] %H:%M:%S '
+#set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
@@ -53,14 +62,18 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# Pane colors
-set -g pane-active-border-fg colour51
-set -g pane-border-fg colour238
+####################
+#   Pane colors    #
+####################
+#set -g pane-active-border-fg colour51
+set -g pane-active-border-fg colour244
+set -g pane-border-fg colour240
 
 bind P paste-buffer
 
 # Packages
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @sidebar-tree-command 'tree -C'
 
 # TMUX Resurect
 run '~/.tmux/plugins/tpm/tpm'
